syntax = "proto3";

package erda.core.pipeline;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/erda-project/erda-proto-go/core/pipeline/pb";

message Cron {
    uint64 ID = 1 [json_name = "id"];
    google.protobuf.Timestamp timeCreated = 2;
    google.protobuf.Timestamp timeUpdated = 3;

    uint64 applicationID = 4;
    string branch = 5;
    string cronExpr = 6;
    google.protobuf.Timestamp cronStartTime = 7;
    string pipelineYmlName = 8;
    uint64 basePipelineID = 9;
    google.protobuf.BoolValue enable = 10;
    string pipelineYml = 11;
    repeated string configManageNamespaces = 12;
    string userID = 13;
    uint64 orgID = 14;
    string pipelineDefinitionID = 15;
    string pipelineSource = 16;
    map<string,string> secrets = 17;
    CronExtra extra = 18;
    google.protobuf.BoolValue IsEdge = 19;
    string clusterName = 20;
}

message CronExtra {
    string pipelineYml = 1;
    string clusterName = 2;
    map<string,string> labels = 3;
    map<string,string> normalLabels = 4;
    map<string,string> envs = 5;
    repeated string configManageNamespaces = 6;
    map<string,string> incomingSecrets = 7;
    google.protobuf.Timestamp cronStartFrom = 8;
    string version = 9;
    CronCompensator compensator = 10;
    google.protobuf.Timestamp lastCompensateAt =11;
}

message CronCompensator {
    google.protobuf.BoolValue enable = 1;
    google.protobuf.BoolValue LatestFirst = 2;
    google.protobuf.BoolValue StopIfLatterExecuted = 3;
}
